test/Fail/Issue2446.err
Issue2446.agda:7.1-13: error: [TriedToCopyConstrainedPrim]
Cannot create a module containing a copy of C.primPOr
when checking the module application module M = C
